--- a/package.json
+++ b/package.json
@@ -7,6 +7,9 @@
   "keywords": [
     "gatsby"
   ],
+  "engines": {
+    "node": ">=18.0.0 <26"
+  },
   "scripts": {
     "develop": "gatsby develop",
     "start": "gatsby develop",
@@ -15,7 +18,7 @@
     "clean": "gatsby clean"
   },
   "dependencies": {
-    "@mdx-js/react": "^3.1.1",
+    "@mdx-js/react": "^2.3.0",
     "babel-plugin-styled-components": "^2.1.4",
     "gatsby": "^5.14.6",
     "gatsby-plugin-google-gtag": "^5.16.0",
